Handle overall form validity

--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -34,3 +34,8 @@
     background-color: #A61E08 ;
 }
 
+.Button:disabled {
+    background-color:#b8ddc9;
+    /* color:#ccc; */
+    cursor: not-allowed;
+}
