--- a/src/components/UI/Spinner/Spinner.module.css
+++ b/src/components/UI/Spinner/Spinner.module.css
@@ -4,7 +4,7 @@
   border-radius: 50%;
 }
 .Loader {
-  color: #ffb03b;
+  color: #bb5e88;
   font-size: 11px;
   text-indent: -99999em;
   margin: 55px auto;
