--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -3,51 +3,56 @@
     justify-content: space-between;
     align-items: center;
     margin: 5px 0;
+    font-size: 20px;
+    text-transform: none;
 }
 
 .BuildControl button {
     display: block;
     font: inherit;
-    padding: 5px;
     margin: 0 5px;
     width: 80px;
-    border: 1px solid #AA6817;
     cursor: pointer;
     outline: none;
+    /* remove button border */
+    padding: 0;
+    border:none;
+    background:none;
 }
 
 .BuildControl button:disabled {
-    background-color: #A64C08;
-    border: 1px solid #7E7365;
     color: #ccc;
     cursor: default;
 }
 
 .BuildControl button:hover:disabled {
-    background-color: #A64C08;
-    color: #ccc;
     cursor: not-allowed;
 }
 
+/* .BuildControl button:hover:disabled> {
+
+} */
+
+
 .Label {
     padding: 20px;
-    font-weight: bold;
-    width: 80px;
-    color: #6920B3;
-    font-size:24px;
+    width: 100px;
+    text-align: center;
+    color: #716e6e;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.BuildControl .Less {  
-    background-color: #8E28005E;
+/* .BuildControl .Less {  
+    background-color: ;
     color: white;
 }
 
 .BuildControl .More {
-    background-color: #468966;
+    background-color: ;
     color: white;
-}
+} */
 
-.BuildControl .Less:hover, .BuildControl .Less:active {  
+/* .BuildControl .Less:hover, .BuildControl .Less:active {  
     background-color: #A61E08;
     color: white;
 }
@@ -55,4 +60,4 @@
 .BuildControl .More:hover,.BuildControl .More:active {
     background-color: #A6BF49;
     color: white;
-}
+} */
