--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -1,41 +1,59 @@
+.backgroundImage {
+    background:none;
+    height:0;
+}
+
+.Backdrop {
+    width:100%;
+    height:100%;
+    background-color:rgba(99, 99, 99, 0.4);
+
+}
 .BuildControls {
-    width: 95%;
-    background-color: #FFB03B;
+    width: 100%;
+    background-color: white;
+    background-size: cover;
+    background-position: center;
     display: flex;
     flex-flow: column;
     align-items: center;
     box-shadow:  0 2px 1px #ccc;
-    margin:auto;
+    margin:10px auto;
     padding: 10px 0;
     border-radius: 25px;
+    text-transform: uppercase;
+    font-size:16px;
+    z-index:500;
+    /* box-sizing:border-box; */
 }
 
 .Price {
-    font-size: 18px;
-    color:white;
+    font-size: 20px;
+    color:#716e6e;
 }
 .OrderButton {
-    background-color: #6F12B3;
+    background-color: #53709a ;
     outline: none;
     cursor: pointer;
-    border: 1px solid #966909;
-    color: #ccc;
+    /* border: 1px solid #966909; */
+    color: white;
     font-family: inherit;
-    font-size: 1.2em;
-    padding: 15px 30px;
-    box-shadow: 2px 2px 2px #966909;
+    font-size: 1em;
+    padding: 10px 20px;
+    border:1px solid #2e5b9e;
+    margin-top: 15px;
 }
 
 .OrderButton:hover, .OrderButton:active {
-    background-color: #A321FF;
-    border: 1px solid #966909;
-    color: #ccc;
+    background-color: #264d86;
+    color: white;
 }
 
 .OrderButton:disabled {
-    background-color: #CB6BFF;
+    background-color: rgb(99, 135, 189);
     cursor: not-allowed;
-    color: #aaa;
+    color: white;
+    
 }
 
 .OrderButton:not(:disabled) {
@@ -51,5 +69,20 @@
     }
     100% {
         transform: scale(1);
+    }
+}
+
+@media (min-width:500px) {
+    .backgroundImage{
+        background-image: url('../../../assets/homepage-background.jpg');
+        background-position: center;
+        background-size: cover;
+        height:500px;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .BuildControls {
+        width: 50%;
     }
 }
