--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -3,10 +3,13 @@
     box-sizing: border-box;
     display: block;
     width:100%;
+    font-weight:800;
+    text-transform: uppercase;
+    font-size: 14px;
 }
 
 .NavigationItem a {
-    color: black;
+    color: #716e6e;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
@@ -16,7 +19,7 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    color: #FFB03B;
+    color: #53709a;
 }
 
 
@@ -31,7 +34,7 @@
     }
     
     .NavigationItem a {
-        color: white;
+        color: #716e6e;
         height: 100%;
         padding: 16px 10px;
         border-bottom: 4px solid transparent;
@@ -40,8 +43,7 @@
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
-        background-color: #FFB03B;
-        border-bottom: 4px solid #6920B3;
-        color: white;
+        border-bottom: 4px solid #53709a;
+        color: #716e6e;
     }
 }
