--- a/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.module.css
+++ b/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.module.css
@@ -13,7 +13,7 @@
 .DrawerToggle div {
     width: 90%;
     height: 3px;
-    background-color: white;
+    background-color: #716e6e;
 }
 
 @media (min-width: 500px) {
