--- a/src/components/OrderSummary/OrderSummary.module.css
+++ b/src/components/OrderSummary/OrderSummary.module.css
@@ -1,5 +1,5 @@
 .OrderSummary {
-    color: #716e6e;
+    color: rgb(105, 113, 123);
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
