--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -38,7 +38,7 @@
     padding: 20px;
     width: 100px;
     text-align: center;
-    color: #716e6e;
+    color: rgb(105, 113, 123);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
